src/test/ui/resolve/resolve-hint-macro.stderr
error[E0423]: expected function, found macro `assert`
  --> $DIR/resolve-hint-macro.rs:2:5
   |
LL |     assert(true);
   |     ^^^^^^ did you mean `assert!(...)`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
